Fix wrong alignment in sidebar

--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
     align-items: center;
     gap: 8px;
     margin: 0px;
-    margin-right: 2vw;
+    margin-right: 3.5vw;
    
 }
 
